--- a/part-1/serviceTest/package.json
+++ b/part-1/serviceTest/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "node bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -11,5 +11,8 @@
     "express": "~4.16.1",
     "lodash": "^4.17.15",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "supertest": "^4.0.2"
   }
 }
