--- a/part-2/package.json
+++ b/part-2/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "linq": "^3.2.1",
     "lodash": "^4.17.15",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "sync-request": "^6.1.0"
   },
   "devDependencies": {},
   "scripts": {
